--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,700&display=swap');
 
+
 html,
 body {
   margin: 0;
   border: 0;
   font-family: 'Roboto', sans-serif;
+}
+
+.container{
+  background-color: #65A6A6;
 }
 
 .header {
@@ -30,11 +35,22 @@ h4 {
 }
 
 img {
-  display: block;
+  width: 100%;
 }
 
 @media (min-width: 960px) {
-  .header {
-    grid-template-columns: repeat(2, 1fr);
+  .container {
+    display: grid;
+    grid-template-columns: 50%;
+    grid-template-areas: 
+    "head pic"
+  }
+
+  .title{
+    grid-area: head;
+  }
+
+  .picture{
+    grid-area: pic;
   }
 }
